[project]
name = "chatterbox-tts"
version = "0.1.6"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    # Core ML Stack (Production Stable)
    "numpy==1.26.4",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "transformers==4.46.3",
    "safetensors==0.5.3",
    "diffusers==0.31.0",
    
    # Audio Processing
    "librosa==0.11.0",
    "s3tokenizer",
    "pyloudnorm",
    "omegaconf",
    
    # TTS Components
    "resemble-perth==1.0.1",
    "conformer==0.3.2",
    "pykakasi==2.3.0",
    "spacy-pkuseg",
    
    # Interface
    "gradio==5.44.1",
]

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
